k8s/kubernetes-dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    #kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: k8s.homeserver.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
